Migrate project from kotlin to java