@@ -1,7 +1,6 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
-    kotlin("jvm") version "1.7.21"
+    id("com.github.johnrengelman.shadow") version "7.1.2"
+    java
     antlr
 }
 
@@ -14,24 +13,20 @@ repositories {
 
 dependencies {
     val graalvmVersion: String by project
+    val antlrVersion: String by project
+
     annotationProcessor("org.graalvm.truffle", "truffle-dsl-processor", graalvmVersion)
-    implementation("org.graalvm.sdk", "graal-sdk", graalvmVersion)
     implementation("org.graalvm.truffle", "truffle-api", graalvmVersion)
-    implementation("org.graalvm.truffle", "truffle-dsl-processor", graalvmVersion)
 
-    antlr("org.antlr:antlr4:4.12.0")
+    antlr("org.antlr", "antlr4", antlrVersion)
 
-    testImplementation(kotlin("test"))
+    testImplementation(platform("org.junit:junit-bom:5.9.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
-tasks.test {
-    useJUnitPlatform()
-}
-
-tasks.withType<KotlinCompile> {
-    dependsOn("generateGrammarSource")
-    kotlinOptions.jvmTarget = "1.8"
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 tasks.generateGrammarSource {
@@ -39,4 +34,19 @@ tasks.generateGrammarSource {
     outputDirectory = File("${project.rootDir}/$grammarOutputDir")
     maxHeapSize = "64m"
     arguments = arguments + listOf("-no-listener", "-visitor", "-long-messages")
+}
+
+tasks.test {
+    useJUnitPlatform()
+    val patchArgs = listOf(
+        "-ea",
+        "--add-exports",
+        "org.graalvm.truffle/com.oracle.truffle.api=ALL-UNNAMED",
+        "--add-exports",
+        "org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED",
+        "--add-exports",
+        "org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED",
+        "-Dgraalvm.locatorDisabled=true"
+    )
+    jvmArgs(patchArgs)
 }
